# lmfit-py

./: .codecov.yml  .gitattributes  .gitignore  .pre-commit-config.yaml  .travis.yml  AUTHORS.txt  CITATION.cff  Contributing.md  INSTALL  LICENSE  MANIFEST.in  PKG-INFO  README.TXT  README.md  README.rst  README.txt  THANKS.txt  azure-pipelines.yml  bounds.html  builtin_models.html  builtin_models.rst  confidence.html  constraints.html  contents.html  faq.html  fitting.html  genindex.html  index.html  installation.html  intro.html  model.html  models1d.html  np-modindex.html  objects.inv  outputs.html  parameters.html  publish_docs.sh  pyproject.toml  requirements-dev.txt  requirements.txt  (+15 more)
.github/: CONTRIBUTING.md  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: issues.md
NIST_STRD/: Models
_downloads/0154e2813b94089bbf5299ca0394b1fe/: model_gaussian.ipynb
_downloads/03a011d59481b4216e391c3137bd067d/: example_emcee_Model_interface.py
_downloads/07eba9d08b4d39a63381bb841755fec2/: example_reduce_fcn.py
_downloads/09d8f7f43ec3dce6d5b393663ef9faed/: model_with_iter_callback.py
_downloads/11228993bffe3617d0f1efdeab5e024f/: model_composite.ipynb
_downloads/11ed0e67a228308a30d9f24a31f915c7/: model_uncertainty.py
_downloads/1472081f47d7f5196684d3d387894e7f/: model_savemodel.py
_downloads/15fee2177fa6048d52beaf06f43d92a8/: builtinmodels_peakmodels.ipynb
_downloads/18a51e50a47e90524ad3b8de0632b714/: example_expression_model.ipynb
_downloads/1d6fd93aa654ed58a525982e5851ec69/: example_emcee_Model_interface.ipynb
_downloads/248ce8c0bee37e42f5d6d08deaa46d51/: model_savemodelresult.py
_downloads/2588677a1a505d9f24402b03894d5bfd/: example_uncertainties_y_and_x.ipynb
_downloads/26ce2dbddf2574aaa1a39f5d8c615892/: parameters_valuesdict.py
_downloads/27b87cac9cd9afd7fa73c15f10211608/: example_fit_with_bounds.py
_downloads/2915663b33b8e67cb51625807994685f/: confidence_basic.ipynb
_downloads/297208a16660f614fb716e83f2e719b4/: model_composite.py
_downloads/2aa89a210d7511484d6c689f08bd05f9/: model_loadmodelresult2.ipynb
_downloads/2c0316848a8a5e58fdf5c1bd1978018e/: example_confidence_interval.ipynb
_downloads/2c9c3a261e6c175818178d5b4d59ee82/: example_fit_with_derivfunc.py
_downloads/2d55b4a7326bc39f1992bc5e650bf85a/: confidence_basic.py
_downloads/2d951cd0a412c86ac2afa3780abde3a2/: example_brute.py
_sources/: bounds.rst.txt  bounds.txt  builtin_models.rst.txt  builtin_models.txt  confidence.rst.txt  confidence.txt  constraints.rst.txt  constraints.txt  contents.txt  faq.rst.txt  faq.txt  fitting.rst.txt  fitting.txt  index.rst.txt  index.txt  installation.rst.txt  installation.txt  intro.rst.txt  intro.txt  model.rst.txt  model.txt  models1d.txt  parameters.rst.txt  parameters.txt  sg_execution_times.rst.txt  simple.txt  support.rst.txt  whatsnew.rst.txt
_static/: basic.css  documentation_options.js  jupyter-sphinx.css  lmfitdoc.css  searchtools.js
asv_benchmarking/: README.md  asv.conf.json  run_benchmark_code.py
conda-recipe/: meta.yaml
doc/: Makefile  bounds.rst  builtin_models.rst  coinfidence.rst  conf.py  confidence.rst  constraints.rst  contents.rst  doc_examples_to_gallery.py  faq.rst  filter_spurious_link_from_html.py  fitting.rst  index.rst  installation.rst  intro.rst  make.bat  model.rst  models.rst  models1d.rst  outputs.rst  parameters.rst  simple.rst  support.rst  whatsnew.rst
examples/: 2D_neutron_data.json  2D_neutron_vanadium_data.json  NISTModels.py  README.txt  benchmark_fit.py  complex_resonator_model.ipynb  confidence_interval.py  confidence_interval2.py  discuss_model_eval_uncertainty.ipynb  dl.py.~1~  doc_basic.py  doc_basic_valuesdict.py  doc_builtinmodels_nistgauss.py  doc_builtinmodels_nistgauss2.py  doc_builtinmodels_peakmodels.py  doc_builtinmodels_splinemodel.py  doc_builtinmodels_stepmodel.py  doc_confidence1.py  doc_confidence2.py  doc_confidence_advanced.py  doc_confidence_basic.py  doc_confidence_chi2_maps.py  doc_fitting_emcee.py  doc_fitting_withreport.py  doc_load_model.py  doc_load_modelresult.py  doc_load_modelresult2.py  doc_model1.py  doc_model2.py  doc_model3.py  doc_model4.py  doc_model_composite.py  doc_model_function_with_varargs.py  doc_model_gaussian.py  doc_model_loadmodel.py  doc_model_loadmodelresult.py  doc_model_loadmodelresult2.py  doc_model_savemodel.py  doc_model_savemodelresult.py  doc_model_savemodelresult2.py  (+114 more)
lib/: __init__.py  asteval.py  astutils.py  coinfidence.py  confidence.py  diagnostics.py  fitter.py  minimizer.py  models.py  parameter.py  printfuncs.py  test_peaks.py  testfit.py  utilfuncs.py
lmfit/: .convolutions.py.swo  __init__.py  _ampgo.py  _differentialevolution.py  _version.py  asteval.py  astutils.py  confidence.py  convolutions.py  exceptions.py  fitter.py  global_fit.py  jsonutils.py  lineshapes.py  minimizer.py  model.py  models.py  models1d.py  parameter.py  printfuncs.py  specified_models.py  utilfuncs.py  wrap.py
tests/: .test_convolutions.py.swo  NISTModels.py  _test_ci.py  conftest.py  example_ci.py  example_ci2.py  example_covar.py  example_derivfunc.py  example_lbfgsb.py  example_peakmodel.py  fit1.py  fit_NIST.py  fit_NIST_leastsq.py  fit_NIST_scipy_lmdif.py  fit_pvoigt.py  fit_pvoigt2.py  fit_pvoigt_NelderMead.py  fit_pvoigt_NelderMead2.py  fit_with_algebraic_constraint.py  fit_with_bounds.py  gauss_modelresult_lmfit100.sav  lmfit_testutils.py  model1d_doc1.py  model1d_doc2.py  peakfit_1.py  simple.py  test_1variable.py  test_NIST_Strd.py  test_algebraic_constraint.py  test_algebraic_constraint2.py  test_ampgo.py  test_anneal.py  test_basicfit.py  test_basinhopping.py  test_bounded_jacobian.py  test_bounded_jacobian2.py  test_bounds.py  test_brute.py  test_brute_method.py  test_builtin_models.py  (+44 more)
(+243 files in other folders)
