[metadata]
name = lmfit
description = Least-Squares Minimization with Bounds and Constraints
long_description = file: README.rst
long_description_content_type = text/x-rst
author = LMFit Development Team
author_email = matt.newville@gmail.com
url = https://lmfit.github.io//lmfit-py/
license = BSD 3-Clause
platforms = any
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
keywords = curve-fitting, least-squares minimization
project_urls =
    Source = https://github.com/lmfit/lmfit-py
    Changelog = https://lmfit.github.io/lmfit-py/whatsnew.html
    Documentation = https://lmfit.github.io/lmfit-py/
    Tracker = https://github.com/lmfit/lmfit-py/issues

[options]
packages = find:
python_requires = >=3.7
setup_requires = setuptools_scm
install_requires =
    asteval>=0.9.28
    numpy>=1.19
    scipy>=1.6
    uncertainties>=3.1.4

[options.packages.find]
include =
    lmfit

[options.extras_require]
dev =
    build
    check-wheel-contents
    pre-commit
    twine
doc =
    cairosvg
    corner
    dill
    emcee>=3.0.0
    ipykernel
    jupyter_sphinx>=0.2.4
    matplotlib
    numdifftools
    pandas
    Pillow
    pycairo;platform_system=="Windows"
    Sphinx
    sphinx-gallery>=0.10
    sphinxcontrib-svg2pdfconverter
    sympy
test =
    coverage
    flaky
    pytest
    pytest-cov
all =
    %(dev)s
    %(test)s
    %(doc)s

[isort]
skip=lmfit/__init__.py,doc/conf.py
known_third_party=asteval,dill,emcee,IPython,matplotlib,numdifftools,numpy,NISTModels,pandas,pytest,scipy,uncertainties
known_first_party=lmfit,lmfit_testutils
force_sort_within_sections=True

[rstcheck]
report=warning
ignore_substitutions=release
ignore_roles=scipydoc,numpydoc
ignore_directives=autoclass,autodoc,autofunction,automethod,jupyter-execute,math

[flake8]
ignore = E121,E123,E126,E226,W503,W504,E501,E731
exclude = doc/conf.py,lmfit/__init__.py

[coverage:run]
omit = tests/*

[tool:pytest]
addopts = --cov=lmfit --cov-report html
